--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,5 +1,18 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
-body {
-  background-color: $brand-primary;
+
+
+.navbar{
+
+ border: 1px solid;
 
 }
+
+.navbar_brand_custom {
+
+ height: 40px;
+width: 40px;
+
+}
+
+
+
